# Spine_Sim_V2

./: .gitignore  README.md  pyproject.toml  仿真实现报告.md
Spine_Sim_V2/: __init__.py  cli.py
Spine_Sim_V2/analysis/: __init__.py  final_mc.py  ranking.py  scoring.py  statistics.py
Spine_Sim_V2/config/: __init__.py  defaults.py  schema.py
Spine_Sim_V2/core/: __init__.py  constants.py  parallel.py  progress.py  types.py  units.py
Spine_Sim_V2/io/: __init__.py  manifest.py  npz_io.py  parquet_io.py  schema_io.py
Spine_Sim_V2/pipelines/: __init__.py  case_tasks.py  p0_surface_bank.py  p1_single_case.py  p2_compliant_k_alpha.py  p3_rigid_alpha.py  p5_array_screen.py  p6_final_mc.py
Spine_Sim_V2/plotting/: __init__.py  plot_case.py  plot_stage.py  plot_surface.py  styles.py
Spine_Sim_V2/solvers/: __init__.py  contact.py  engagement.py  loading.py  search.py
Spine_Sim_V2/surfaces/: __init__.py  audit.py  bank.py  generator.py  profiles.py
Spine_Sim_V2/tests/: __init__.py  test_phase10_final_acceptance.py  test_phase11_fix_regressions.py  test_phase1_io.py  test_phase2_surface_bank.py  test_phase3_single_case.py  test_phase4_events.py  test_phase5_p1_sanity.py  test_phase6_p2_p3_screen.py  test_phase7_p5_array_screen.py  test_phase8_p6_final_mc.py  test_phase9_analysis_plotting.py
docs/: data_schema.md  pipeline.md  plotting.md  scoring.md  surface_bank.md  启动命令说明.md
plot_styles/: debug.yaml  paper.yaml  report.yaml
scripts/: analyze_results.py  plot_results.py  simulate.py
